//auth.proto

syntax = "proto3";


import "common.proto";
import "google/protobuf/empty.proto";



message TeamMemberUserData {
  string fullName = 1;
  string email = 2;
  string avatarUri = 3;
}


message GetUserRequest {
  User authUserData = 1;
  string targetUserId = 2;
  RequestMeta reqMeta = 3;
}

message GetUserResponseData {
  string fullName = 1;
  string email = 2;
  string avatarUri = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message GetUserResponse {
  int32 code = 1;
  string message = 2;
  GetUserResponseData res = 3;
}


message GetCurrentUserResponseData {
  string userId = 1;
  string fullName = 2;
  string email = 3;
  string avatarUri = 4;
  bool   emailVerified = 5;
  string createdAt = 6;
  string updatedAt = 7;
  string provider = 8;
  SubscriptionData subscription = 9;
  repeated GetTeamMemberResponseData teamMembers = 10;
  repeated GetProjectMemberResponseData  projectMembers = 21;
}


message GetCurrentUserResponse {
  int32 code = 1;
  string message = 2;
  GetCurrentUserResponseData res = 3;
}



// Auth-related messages
message LoginRequest {
  string email = 1;
  string password = 2;
  RequestMeta reqMeta= 3;
}

message SigninRequest {
  string fullName = 1;
  string email = 2;
  string password = 3;
  string avatarUri = 4;
  RequestMeta reqMeta= 5;
}

message OAuthRequest {
  string fullName = 1;
  string email = 2;
  string password = 3;
  string avatarUri = 4;
  string provider = 5;
  RequestMeta reqMeta= 6;
}

message Tokens {
  string refreshToken = 1;
  string accessToken = 2;
}

message LoginResponse {
  int32 code = 1;
  string message = 2;
  Tokens res = 3;
}


// Team-related messages
message Team {
  string teamId = 1;
  string teamName = 2;
  string description = 3;
  string planType = 4;
  string createdAt = 5;
  TeamMemberCount _count = 6;
  string updatedAt = 7;
}

message TeamMemberCount {
  int32 teamMembers = 1;
}

message CreateTeamRequest {
  User authUserData = 1;
  string teamName = 2;
  string description = 3;
  RequestMeta reqMeta= 4;
}

message CreateTeamResponse {
  int32 code = 1;
  string message = 2;
  Team res = 3;
}

message GetTeamRequest {
  User authUserData = 1;
  string teamId = 2;
  RequestMeta reqMeta= 3;
}

message GetTeamResponse {
  int32 code = 1;
  string message = 2;
  Team res = 3;
}

message DeleteTeamRequest {
  User authUserData = 1;
  string teamId = 2;
  RequestMeta reqMeta= 3;
}

message DeleteTeamResponse {
  int32 code = 1;
  string message = 2;
  Team res = 3;
}

message TransferTeamOwnershipRequest {
  User authUserData = 1;
  string teamId = 2;
  string newOwnerId = 3;
  RequestMeta reqMeta= 4;
}

// Team member invitation messages
message CreateTeamMemberInvitationRequest {
  User authUserData = 1;
  string teamId = 2;
  string role = 3;
  RequestMeta reqMeta= 4;
}

message CreateTeamMemberInvitationResponseData {
  string inviteId = 1;
  string role = 2;
  string teamId = 3;
  string createdAt = 4;
  string updatedAt = 5;
  string expiresAt = 6;
}

message CreateTeamMemberInvitationResponse {
  int32 code = 1;
  string message = 2;
  CreateTeamMemberInvitationResponseData res = 3;
}

message AcceptInvitationRequest {
   User authUserData = 1;
   string inviteId = 2;
   RequestMeta reqMeta= 3;
}

// Team member messages
message GetTeamMemberRequest {
  string targetUserId = 1;
  string teamId = 2;
  User   authUserData = 3;
  RequestMeta reqMeta= 4;
}

message TransferProjectOwnershipRequest {
  User authUserData = 1;
  string projectId = 2;
  string newOwnerId = 3;
  RequestMeta reqMeta= 4;
}

message GetTeamMemberResponseData {
  string userId = 1;
  string teamId = 2;
  string role = 3;
  TeamMemberUserData member = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message GetTeamMemberResponse {
  int32 code = 1;
  string message = 2;
  GetTeamMemberResponseData res = 3;
}

message DeleteTeamMemberRequest {
  User authUserData = 1;
  string targetUserId = 2;
  string teamId = 3;
  RequestMeta reqMeta= 4;
}

message DeleteTeamMemberResponseData {
   string role = 1;
   string userId = 2;
   string teamId = 3;
}

message DeleteTeamMemberResponse {
  int32 code = 1;
  string message = 2;
  DeleteTeamMemberResponseData res = 3;
}

// Project member invitation messages
message CreateProjectMemberInvitationRequest {
  User authUserData = 1;
  string targetUserId = 2;
  string projectId = 3;
  string role = 4;
  RequestMeta reqMeta= 5;
}

message CreateProjectMemberInvitationResponseData {
  string inviteId = 1;
  string role = 2;
  string projectId = 3;
  string createdAt = 4;
  string updatedAt = 5;
  string expiresAt = 6;
}

message CreateProjectMemberInvitationResponse {
  int32 code = 1;
  string message = 2;
  CreateProjectMemberInvitationResponseData res = 3;
}

// Project member messages
message GetProjectMemberRequest {
  string targetUserId = 1;
  string projectId = 2;
  User   authUserData = 3;
  RequestMeta reqMeta= 4;
}

message GetProjectMemberResponseData {
  string memberId = 1;
  string userId = 2;
  string projectId = 3;
  string role = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message GetProjectMemberResponse {
  int32 code = 1;
  string message = 2;
  GetProjectMemberResponseData res = 3;
}

message DeleteProjectMemberRequest {
  User authUserData = 1;
  string targetUserId = 2;
  string projectId = 3;
  RequestMeta reqMeta= 4;
}

message DeleteProjectMemberResponseData {
   string role = 1;
   string userId = 2;
   string projectId = 3;
}

message DeleteProjectMemberResponse {
  int32 code = 1;
  string message = 2;
  DeleteProjectMemberResponseData res = 3;
}

message HasPermissionsRequest {
   string scope = 1;
   repeated string permissions = 2;
   string resourceId = 3;
   User authUserData = 4;
   string targetUserId = 5;
   RequestMeta reqMeta= 6;
}

message HasPermissionsResponse {
   int32 code = 1;
   string message = 2;
   bool res = 3;
}

message GetAllUserTeamsResponse {
  int32 code = 1;
  string message = 2;
  repeated Team res = 3;
}

message GetAllUserProjectIdsResponse {
  int32 code = 1;
  string message = 2;
  repeated string res = 3;
}

message GetTeamsLinkedToProjectRequest {
  User authUserData = 1;
  string projectId = 2;
  RequestMeta reqMeta= 3;
}


message GetTeamMembersRequest {
  User authUserData = 1;
  string teamId = 2;
  int32 limit = 3;
  int32 skip = 4;
  RequestMeta reqMeta= 5;
}

message GetTeamMembersResponse {
  int32 code = 1;
  string message = 2;
  repeated GetTeamMemberResponseData res = 3;
}

message GetProjectIdsLinkedToTeamRequest {
  User authUserData = 1;
  string teamId = 2;
  RequestMeta reqMeta= 3;
}

message LinkTeamToProjectRequest {
   User authUserData = 1;
   string projectId = 2;
   string teamId = 3;
   RequestMeta reqMeta = 4; 
}

message LinkTeamToProjectResponse {
   int32 code = 1;
   string message = 2;
   bool res = 3;
}

message UnlinkTeamFromProjectRequest {
  User authUserData = 1;
   string projectId = 2;
   string teamId = 3;
   RequestMeta reqMeta = 4; 
}

message UnlinkTeamFromProjectResponse {
   int32 code = 1;
   string message = 2;
   bool res = 3;
}

message GetWSAuthTokenResponse {
  int32 code = 1;
  string message = 2;
  WSAuthToken res = 3;
}

message WSAuthToken {
  string wsAuthToken = 1;
}

message VerifyEmailRequest {
  string token = 1;
  RequestMeta reqMeta = 2;
} 





// AuthService definition
service AuthService {
  // Authentication
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Signin(SigninRequest) returns (LoginResponse);
  rpc OAuth(OAuthRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetMe(BodyLessRequest) returns (GetCurrentUserResponse);
  rpc RefreshToken(BodyLessRequest) returns (LoginResponse);
  rpc GetWSAuthToken(BodyLessRequest) returns (GetWSAuthTokenResponse);
  rpc VerifyEmail (VerifyEmailRequest) returns (google.protobuf.Empty);

  // Team Management
  rpc CreateTeam(CreateTeamRequest) returns (CreateTeamResponse);
  rpc GetTeam(GetTeamRequest) returns (GetTeamResponse);
  rpc GetTeamsLinkedToProject(GetTeamsLinkedToProjectRequest) returns (GetAllUserTeamsResponse);
  rpc DeleteTeam(DeleteTeamRequest) returns (DeleteTeamResponse);
  rpc GetAllUserTeams(BulkResourceRequest) returns (GetAllUserTeamsResponse);
  rpc LinkTeamToProject (LinkTeamToProjectRequest) returns (LinkTeamToProjectResponse);
  rpc UnlinkTeamFromProject (UnlinkTeamFromProjectRequest) returns (UnlinkTeamFromProjectResponse);

  
  // Team Members
  rpc CreateTeamMemberInvitation(CreateTeamMemberInvitationRequest) returns (CreateTeamMemberInvitationResponse);
  rpc GetTeamMembers(GetTeamMembersRequest) returns (GetTeamMembersResponse);
  rpc DeleteTeamMember(DeleteTeamMemberRequest) returns (DeleteProjectMemberResponse);
  rpc AcceptTeamInvitation(AcceptInvitationRequest) returns (GetTeamMemberResponse);
  rpc TransferTeamOwnership(TransferTeamOwnershipRequest) returns (google.protobuf.Empty);
  
  // Project Members
  rpc CreateProjectMemberInvitation(CreateProjectMemberInvitationRequest) returns (CreateProjectMemberInvitationResponse);
  rpc DeleteProjectMember(DeleteProjectMemberRequest) returns (DeleteProjectMemberResponse);
  rpc AcceptProjectInvitation(AcceptInvitationRequest) returns (GetProjectMemberResponse);
  rpc GetAllUserProjectIds (BodyLessRequest) returns (GetAllUserProjectIdsResponse);
  rpc TransferProjectOwnership(TransferProjectOwnershipRequest) returns (google.protobuf.Empty);

  rpc HasPermissions(HasPermissionsRequest) returns (HasPermissionsResponse);

  rpc IGetAllProjectIdsLinkedToTeam (GetProjectIdsLinkedToTeamRequest) returns (GetAllUserProjectIdsResponse);

  // Future: partial decentralized RBAC
  // rpc UpdateTeamMember(UpdateTeamMemberRequest) returns (UpdateTeamMemberResponse);
  // rpc UpdateProjectMember(UpdateProjectMemberRequest) returns (UpdateProjectMemberResponse);
}
